# league_analytics

./: .gitignore  Dockerfile  README.md  Readme.md  Taskfile.yaml  docker-compose.yml  pyproject.toml  run_gold.py  run_ingest.py  run_silver.py
dags/: final_standing_dag.py
docker/: Dockerfile
experiments/: calculate_itterations.ipynb  check_weeks.ipynb  schedule.ipynb  scores.ipynb  total_standings.ipynb
src/bronze/: ingest_raw_data.py
src/config/: settings.py
src/etl/bronze/: ingest_raw_data.py
src/etl/gold/: compute_recent_form.py  compute_standings.py
src/etl/silver/: build_match_facts.py
src/gold/: compute_standings.py
src/silver/: build_match_facts.py
src/spark_jobs/: execute_ingestion.py  execute_total_standings.py  match_fact_table.py  save_to_csv.py
src/utils/: constands.py  logger.py  spark_functions.py
src/validators/: dataframe_validation.py  expectations.py  runner.py
stc/config/: settings.py
stc/utils/: logger.py
